--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,24 +10,36 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@master
-    - name: Set node version
-      uses: actions/setup-node@master
-      with:
-        node-version: '10.x'
-    - name: Install dependencies
-      run: npm install
-    - name: Build
-      run: npm run build
+      - name: Checkout Repo
+        uses: actions/checkout@master
+      - name: Set node version
+        uses: actions/setup-node@master
+        with:
+          node-version: '10.x'
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Archive Production Artifact
+          uses: actions/upload-artifact@master
+          with:
+            name: build
+            path: build
 
   deploy:
-    needs: build
+    needs: Deploy
     runs-on: ubuntu-latest
     steps:
-    - name: Deploy
-      uses: w9jds/firebase-action@master
-      with:
-        args: deploy --only hosting
-      env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+      - name: Checkout Repo
+        uses: actions/checkout@master
+      - name: Download Artifact
+        uses: actions/download-artifact@master
+        with:
+          name: build
+          path: build
+      - name: Deploy to Firebase
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
